--- a/source/index.html
+++ b/source/index.html
@@ -65,29 +65,30 @@
       </g>
     </symbol>
   </svg>
-  <div class="page-wrapper">
-    <aside class="page-header">
-      <div class="header-wrapper">
-        <nav class="navigation">
-          <ul class="navigation-list">
-            <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#food"></use></svg> Tastemakers</a></li>
-            <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#blog"></use></svg> Blog</a></li>
-            <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#a-list"></use></svg> The A-List</a></li>
-            <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#camera"></use></svg> Contribure</a></li>
-            <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#about"></use></svg> About</a></li>
-          </ul>
-          <a href="" class="navigation-logo"><img class="navigation-logo__img" width="120px" height="120px" src="./img/logo.svg" alt="Логотип"></a>
-        </nav>
-        <div class="for-desctop">
-          <p class="navigation-title">Latest tweet</p>
-          <button class="navigation-button"><a class="navigation-button__link" href=""> <svg class="" width="16" height="16"> <use xlink:href="#twitter"></use></svg>Join the Conversation</a></button>
-          <p class="navigation-title">Let's be friends!</p>
-          <p class="navigation-text">For weekly finds, community recommendations, and more, like us on Facebook.</p>
-          <button class="navigation-button"><a class="navigation-button__link" href=""> <svg class="" width="16" height="16"> <use xlink:href="#twitter"></use></svg>Join the Community</a></button>
-        </div>
-      </div>
-    </aside>
     <main class="page-main">
+      <div class="page-wrapper">
+      <aside class="page-header">
+        <div class="header-wrapper">
+          <nav class="navigation">
+            <ul class="navigation-list">
+              <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#food"></use></svg> Tastemakers</a></li>
+              <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#blog"></use></svg> Blog</a></li>
+              <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#a-list"></use></svg> The A-List</a></li>
+              <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#camera"></use></svg> Contribure</a></li>
+              <li class="navigation-item"> <a class="navigation-item__link" href=""> <svg class="navigation-item__link__img" width="32" height="32"> <use xlink:href="#about"></use></svg> About</a></li>
+            </ul>
+            <a href="" class="navigation-logo"><img class="navigation-logo__img" width="120px" height="120px" src="./img/logo.svg" alt="Логотип"></a>
+          </nav>
+          <div class="for-desctop">
+            <p class="navigation-title">Latest tweet</p>
+            <button class="navigation-button"><a class="navigation-button__link" href=""> <svg class="" width="16" height="16"> <use xlink:href="#twitter"></use></svg>Join the Conversation</a></button>
+            <p class="navigation-title">Let's be friends!</p>
+            <p class="navigation-text">For weekly finds, community recommendations, and more, like us on Facebook.</p>
+            <button class="navigation-button"><a class="navigation-button__link" href=""> <svg class="" width="16" height="16"> <use xlink:href="#twitter"></use></svg>Join the Community</a></button>
+          </div>
+        </div>
+      </aside>
+      <div class="left-column">
       <section class="carusel">
         <div class="wrapper">
           <div class="carusel-image">
@@ -179,8 +180,9 @@
           </ul>
         </div>
       </section>
+      </div>
+      </div>
     </main>
-  </div>
     <footer class="footer">
       <div class="footer-wrapper">
         <div class="copyright">
