add: js for carusel

--- a/source/index.html
+++ b/source/index.html
@@ -91,24 +91,42 @@
       <div class="left-column">
       <section class="carusel">
         <div class="wrapper">
-          <div class="carusel-image">
-            <p class="carusel-title">Share you Foor Sence</p>
-            <p class="carusel-text">Submit your favorite recepies, become a contributor, or get interviewed.</p>
+          <div class="carusel-wrapper">
+            <div class="carusel-image active" style="background-image: url(./img/baner.png)">
+              <p class="carusel-title">Share you Foor Sence</p>
+              <p class="carusel-text">Submit your favorite recepies, become a contributor, or get interviewed.</p>
+            </div>
+            <div class="carusel-image" style="background-image: url(./img/baner2.png)" >
+              <p class="carusel-title">Share you Foor Sence</p>
+              <p class="carusel-text">Submit your favorite recepies, become a contributor, or get interviewed.</p>
+            </div>
+            <div class="carusel-image" style="background-image: url(./img/baner3.png)">
+              <p class="carusel-title">Share you Foor Sence</p>
+              <p class="carusel-text">Submit your favorite recepies, become a contributor, or get interviewed.</p>
+            </div>
+            <div class="carusel-image" style="background-image: url(./img/baner4.png)">
+              <p class="carusel-title">Share you Foor Sence</p>
+              <p class="carusel-text">Submit your favorite recepies, become a contributor, or get interviewed.</p>
+            </div>
+            <div class="carusel-btn">
+              <button class="carusel-btn__item next" id="prew"><</button>
+              <button class="carusel-btn__item prew" id="next">></button>
+            </div>
           </div>
           <ul class="carusel-list">
-            <li class="carusel-item">
+            <li class="carusel-item" id="1">
               <span class="carusel-item__title">Tastemakers</span>
               <span class="carusel-item__text">Feast your eyes & get reciepes!</span>
             </li>
-            <li class="carusel-item">
+            <li class="carusel-item" id="2">
               <span class="carusel-item__title">Blog</span>
               <span class="carusel-item__text">News, how-tos, stories, and more</span>
             </li>
-            <li class="carusel-item">
+            <li class="carusel-item" id="3">
               <span class="carusel-item__title">The A-List</span>
               <span class="carusel-item__text">Handpicked, absolute favorites</span>
             </li>            
-            <li class="carusel-item carusel-item__active">
+            <li class="carusel-item carusel-item__active" id="4">
               <span class="carusel-item__title">Contribute</span>
               <span class="carusel-item__text">We want to hear from you!</span>
             </li>
@@ -204,5 +222,6 @@
         </ul>
       </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
